--- a/www/index.html
+++ b/www/index.html
@@ -1,19 +1,333 @@
 <!doctype html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой первый проект</title>
-    <link rel="stylesheet" href="style/style.css">
-</head>
-<body>
-    <div class="promo">
-        <div class="promo-inner">
-            <h1 class="promo-ttl">Заголовок сайта</h1>
-            <p class="promo-slogan">Описание сайта, типа тут все самое офиггенное и опупенное!</p>
-        </div>
-    </div>
 
-    <script src="scripts/script.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ekaterina Zaharchuk</title>
+  <link rel="stylesheet" href="style/style.css">
+  <!-- <link rel="stylesheet" type="text/css" href="./slick/slick.css"/> -->
+</head>
+
+<body>
+  <div class="header">
+    <div class="header-inner">
+      <div class="header-wrapper">
+        <div class="menu">
+          <ul class="menu-list">
+            <li class="menu-item">
+              <a href="#" class="menu-link">Обо мне</a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Услуги</a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Обучение</a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Цены</a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">FAQ</a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Записаться</a>
+            </li>
+          </ul>
+        </div>
+        <div class="header-links">
+          <ul class="header-links-list">
+            <li class="header-links-item">
+              <a href="#" class="header-links-href">
+                <img src="./images/telegram.png" alt="" class="href-img">
+              </a>
+            </li>
+            <li class="header-links-item">
+              <a href="#" class="header-links-href">
+                <img src="./images/vk.png" alt="" class="href-img">
+              </a>
+            </li>
+            <li class="header-links-item">
+              <a href="#" class="header-links-href">
+                <img src="./images/insta.png" alt="" class="href-img">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <main>
+    <div class="presentation">
+      <div class="presentation-inner">
+        <div class="presentation-wrapper">
+          <div class="presentation-background-one">
+            <img src="./images/Ellipse.png" alt="" class="one-img">
+          </div>
+          <div class="presentation-backround-two">
+            <img src="./images/Wiggles_58 1.png" alt="" class="two-img">
+          </div>
+          <div class="presentation-title-block">
+            <p class="presentation-pre-title">Контент-видеомейкер</p>
+            <h1 class="presentation-title-name">Екатерина <br>
+              Захарчук</h1>
+            <img src="./images/katy.png" alt="" class="title-image">
+            <h2 class="presentation-title">Создаю контент, раскрывающий <br> душу</h2>
+            <img src="./images/Linked Path Group.png" alt="" class="title-about-me">
+            <p class="presentation-text">
+              Созданием контента я занимаюсь уже 2 года, успешно поработав с мастерами бьюти-сферы, <br> стилистами,
+              сферой
+              моды, а так же кафе, ресторанами и флористами. В списке <br> сотрудничества гордо числятся OffWhite,
+              Stella
+              McCartney и другие люкс-бренды. <br>
+              Так же с мая 2022 являюсь учителем и наставником, выпустив своё обучение по <br> видеомейкингу и созданию
+              продающего контента через личный бренд и продвижение
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="services">
+      <div class="services-inner">
+        <div class="services-img-box">
+          <img src="./images/Star.png" alt="" class="back-three">
+        </div>
+        <div class="services-wraper">
+          <h2 class="services-title">услуги</h2>
+          <div class="services-description-box">
+            <p class="services-description-box-text">креативная съемка видео</p>
+            <div class="services-description-box-hover">
+              <a href="#" class="services-description-title">подробнее</a>
+              <img src="./images/Arrow.png" alt="" class="services-description-arrow">
+            </div>
+          </div>
+          <div class="services-blocks">
+            <div class="block1">
+              <div class="block-hover1">
+                <a href="#" class="block-hover-link">подробнее</a>
+                <img src="./images/Arrow.png" alt="" class="block-hover-arrow">
+              </div>
+              <p class="block-text one">классическая <br> съемка видео</p>
+            </div>
+            <div class="block2">
+              <div class="block-hover2">
+                <a href="#" class="block-hover-link">подробнее</a>
+                <img src="./images/Arrow.png" alt="" class="block-hover-arrow">
+              </div>
+              <p class="block-text two">рилс под <br> ключ</p>
+            </div>
+            <div class="block3">
+              <div class="block-hover3">
+                <a href="#" class="block-hover-link">подробнее</a>
+                <img src="./images/Arrow.png" alt="" class="block-hover-arrow">
+              </div>
+              <p class="block-text three">съемка <br> контента для <br> соцсетей</p>
+            </div>
+            <div class="block4">
+              <div class="block-hover4">
+                <a href="#" class="block-hover-link">подробнее</a>
+                <img src="./images/Arrow.png" alt="" class="block-hover-arrow">
+              </div>
+              <p class="block-text four">монтаж из <br> ваших материалов</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+      <div class="slider">
+        <div class="slider-inner">
+          <h2 class="slider-title">отзывы</h2>
+          <div class="slider-wraper">
+            <div class="slider-item">
+              <img src="./images/img5.png" alt="" class="slider-img">
+              <div class="slider-inst-block">
+                <a href="#" class="slider-link">Instagram</a>
+                <img src="./images/Arrow-inst.png" alt="" class="slider-inst-arrow">
+              </div>
+            </div>
+            <div class="slider-item">
+              <img src="./images/img1.png" alt="" class="slider-img small">
+              <div class="slider-inst-block">
+                <a href="#" class="slider-link">Instagram</a>
+                <img src="./images/Arrow-inst.png" alt="" class="slider-inst-arrow">
+              </div>
+            </div>
+            <div class="slider-item">
+              <img src="./images/img2.png" alt="" class="slider-img medium">
+              <div class="slider-inst-block">
+                <a href="#" class="slider-link">Instagram</a>
+                <img src="./images/Arrow-inst.png" alt="" class="slider-inst-arrow">
+              </div>
+            </div>
+            <div class="slider-item">
+              <img src="./images/img3.png" alt="" class="slider-img">
+              <div class="slider-inst-block">
+                <a href="#" class="slider-link">Instagram</a>
+                <img src="./images/Arrow-inst.png" alt="" class="slider-inst-arrow">
+              </div>
+            </div>
+            <div class="slider-item">
+              <img src="./images/img4.png" alt="" class="slider-img">
+              <div class="slider-inst-block">
+                <a href="#" class="slider-link">Instagram</a>
+                <img src="./images/Arrow-inst.png" alt="" class="slider-inst-arrow">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <div class="study">
+      <div class="study-inner">
+        <h2 class="study-title">обучение</h2>
+        <div class="study-wraper">
+          <div class="block">
+            <p class="study-text fi">обучение <br> видеосъемке <br> 'videobomb'</p>
+            <div class="block-hover">
+              <a href="#" class="block-hover-link">подробнее</a>
+              <img src="./images/Arrow.png" alt="" class="block-hover-arrow">
+            </div>
+          </div>
+          <div class="block">
+            <p class="study-text second">Менторство по заработку <br> и продвижению для <br> экспертов</p>
+            <div class="block-hover">
+              <a href="#" class="block-hover-link">подробнее</a>
+              <img src="./images/Arrow.png" alt="" class="block-hover-arrow">
+            </div>
+          </div>
+          <div class="block">
+            <p class="study-text th">здесь что-то будет</p>
+            <div class="block-hover">
+              <a href="#" class="block-hover-link">подробнее</a>
+              <img src="./images/Arrow.png" alt="" class="block-hover-arrow">
+            </div>
+          </div>
+          <div class="block">
+            <p class="study-text four">консультации</p>
+            <div class="block-hover">
+              <a href="#" class="block-hover-link">подробнее</a>
+              <img src="./images/Arrow.png" alt="" class="block-hover-arrow">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="questions">
+      <div class="questions-wrapper">
+        <div class="title-wrapper">
+          <img src="./images/long.png" alt="" class="questions-img">
+          <h2 class="question-title">часто задаваемые вопросы</h2>
+        </div>
+        <div class="accordeon">
+          <hr>
+          <div class="accordeon-item">
+            <p class="item-title">Как производится оплата услуг/обучения ?</p>
+            <img src="./images/plus.png" alt="" class="item-img-plus">
+            <img src="./images/line.png" alt="" class="item-img-minus">
+            <div class="item-block">
+              <p class="item-text">Оплата производится безналичным расчётом, <br> предварительно составляем договор. <br> Для компаний и юр.лиц возможно выставление счета.</p>
+            </div>
+          </div>
+          <hr>
+          <div class="accordeon-item">
+            <p class="item-title">Есть ли рассрочка на обучение ?</p>
+            <img src="./images/plus.png" alt="" class="item-img-plus">
+            <img src="./images/line.png" alt="" class="item-img-minus">
+            <div class="item-block">
+              <p class="item-text">Да, конечно есть. <br> Рассрочку можно произвести внутреннюю, через меня (до 3-4х месяцев) <br> и так же внешнюю, через банк (6-10-12 месяцев).</p>
+            </div>
+          </div>
+          <hr>
+          <div class="accordeon-item">
+            <p class="item-title">Сколько стоит обучение ?</p>
+            <img src="./images/plus.png" alt="" class="item-img-plus">
+            <img src="./images/line.png" alt="" class="item-img-minus">
+            <div class="item-block">
+              <p class="item-text">Обучение по видеосъемке <br> VIDEOBOMB - 1,5 месяца <br> (тарифы middle school и You R High & The Best)</p>
+            </div>
+          </div>
+          <hr>
+          <div class="accordeon-item">
+            <p class="item-title">Какую технику используете для съемки ?</p>
+            <img src="./images/plus.png" alt="" class="item-img-plus">
+            <img src="./images/line.png" alt="" class="item-img-minus">
+            <div class="item-block">
+              <p class="item-text">Снимаю на мобильный телефон, IPhone 14 pro max. <br> Обучение тоже строится на основе мобильной съемки <br> (подойдёт и тем у кого Iphone, и тем у кого Android)</p>
+            </div>
+          </div>
+          <hr>
+          <div class="accordeon-item">
+            <p class="item-title">Кому подойдет обучение ?</p>
+            <img src="./images/plus.png" alt="" class="item-img-plus">
+            <img src="./images/line.png" alt="" class="item-img-minus">
+            <div class="item-block">
+              <p class="item-text">Новичкам , кто ищет себя и свое дело <br>
+                Мамам в декрете для доп заработка и прибыльного хобби <br>
+                Смм-специалистам для повышения своих навыков и чека <br>
+                Предпринимателям для развития своего бизнеса</p>
+            </div>
+          </div>
+          <hr>
+        </div>
+       </div>
+    </div>
+    <div class="contacts">
+        <div class="contacts-wrapper">
+          <div class="form-wrapper">
+            <h2 class="contact-title">запишись на <br> бесплатную <br> диагностику и получи <br> подарок</h2>
+            <form method="post" action="./mail.php" class="form">
+              <label for="name" class="form-label">
+                <input class="form-input" type="text" id="tel" name="name" placeholder="Имя">
+              </label>
+              <label for="tel" class="form-label">
+                <input class="form-input" type="tel" id="tel" name="tel" placeholder="Телефон">
+              </label>
+              <label for="radio" class="form-label">
+                <input class="form-checkbox" type="checkbox" id="confrim" name="confrim" ><span class="checkbox-text">Я соглашаюсь с условиями  </span><a href="#" class="form-link">политики конфиденциальности</a></input>
+              </label>
+              <button type="submit" class="form-button">Записаться</button>
+            </form>
+          </div>
+          <div class="img-wrapper">
+            <img src="./images/contactImg.png" alt="" class="contact-img">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="footer-inner">
+        <h2 class="footer-title">связаться со мной</h2>
+        <div class="footer-wrapper">
+          <img src="./images/footerarrow.png" alt="" class="footer-img">
+          <img src="./images/footerarrow.png" alt="" class="footer-img">
+          <img src="./images/footerarrow.png" alt="" class="footer-img">
+          <img src="./images/footerarrow.png" alt="" class="footer-img">
+          <ul class="footer-list">
+            <li class="footer-list-item">
+              <a href="#" class="footer-link">instagram</a>
+            </li>
+            <hr class="footer-hr">
+            <li class="footer-list-item">
+              <a href="#" class="footer-link">vkontakte</a>
+            </li>
+            <hr class="footer-hr">
+          </ul>
+          <ul class="footer-list">
+            <li class="footer-list-item">
+              <a href="#" class="footer-link">telegram</a>
+            </li>
+            <hr class="footer-hr">
+            <li class="footer-list-item">
+              <a href="#" class="footer-link">whatsup</a>
+            </li>
+            <hr class="footer-hr">
+          </ul>
+        </div>
+      </div>
+    </div>
+  </main>
+  <script src="scripts/jquery-3.6.0.min.js"></script>
+  <script src="scripts/slick.min.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
+
 </html>
